--- a/xk-truck-frontend/src/components/Header.astro
+++ b/xk-truck-frontend/src/components/Header.astro
@@ -89,7 +89,7 @@ const currentPath = Astro.url.pathname;
         </svg>
         <div>
           <span class="font-bold text-xl text-gray-900">TRUCK</span>
-          <span class="block text-xs text-gray-500">Heavy Truck Parts</span>
+          <span class="block text-xs text-gray-500">Heavy Truck Lights</span>
         </div>
       </a>
       
